@startuml
enum PhoneState {
    off,
    on,
    unknown,
}
enum ConnectionState {
    connected,
    offline,
}
interface iSmartPhone {
    # Phonenumber : string <<get>> <<set>>
    - makeACall(phonenumber:string) : bool
    + receiveCall(incommingNumber:string) : bool
    - startBrowser() : bool
    + getOS() : string
}
class AppleFeatures {
    - AppleID : string <<get>> <<set>>
    # BuyAppFromAppStore(AppName:string) : void
    # RunAppleLocalization() : bool
}
abstract class AndroidFeatures {
    - GoogleUserAccount : string <<get>> <<set>>
    + BuyAppFromPlayStore(AppName:string) : void
    # {abstract} RunVendorSpecificLocalization() : bool
}
abstract class AndroidPhone {
    - <<readonly>> OS : string = "Android"
    # Phonenumber : string <<get>> <<set>>
    makeACall(phonenumber:string) : bool
    + receiveCall(incommingNumber:string) : bool
    - startBrowser() : bool
    + getOS() : string
    # <<override>> RunVendorSpecificLocalization() : bool
}
class ApplePhone {
    - <<readonly>> OS : string = "AppleOS"
    # Phonenumber : string <<get>> <<set>>
    makeACall(phonenumber:string) : bool
    + receiveCall(incommingNumber:string) : bool
    - startBrowser() : bool
    + getOS() : string
    ApplePhone(Phonenumber:string)
}
class SamsungPhone {
    Samsung(Phonenumber:string)
    # <<override>> RunVendorSpecificLocalization() : bool
}
class Program {
    {static} Main(args:string[]) : void
}
iSmartPhone --> "PhoneState" PhoneState
iSmartPhone --> "ConnectionState" ConnectionState
AndroidFeatures <|-- AndroidPhone
iSmartPhone <|-- AndroidPhone
AndroidPhone --> "PhoneState" PhoneState
AndroidPhone --> "ConnectionState" ConnectionState
AppleFeatures <|-- ApplePhone
iSmartPhone <|-- ApplePhone
ApplePhone --> "PhoneState" PhoneState
ApplePhone --> "ConnectionState" ConnectionState
AndroidPhone <|-- SamsungPhone
@enduml
